--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
       }
     }
   </style>
+
+  <!-- Open Graph / Social Media Preview -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Wilson Ball" />
+  <meta property="og:description" content="Interactive 3D basketball physics simulation" />
+  <meta property="og:image" content="/og-preview.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Wilson Ball" />
+  <meta name="twitter:description" content="Interactive 3D basketball physics simulation" />
+  <meta name="twitter:image" content="/og-preview.jpg" />
+
   <title>Wilson Ball</title>
 </head>
 
