Refactor to physics-based App.jsx, update README, and fix linting errors

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <!-- Open Graph / Social Media Preview -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Wilson Ball" />
+  <meta property="og:title" content="Wilson Balls" />
   <meta property="og:description" content="Interactive 3D basketball physics simulation" />
   <meta property="og:image" content="/og-preview.jpg" />
   <meta property="og:image:width" content="1200" />
@@ -91,11 +91,11 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Wilson Ball" />
+  <meta name="twitter:title" content="Wilson Balls" />
   <meta name="twitter:description" content="Interactive 3D basketball physics simulation" />
   <meta name="twitter:image" content="/og-preview.jpg" />
 
-  <title>Wilson Ball</title>
+  <title>Wilson Balls</title>
 </head>
 
 <body>
